--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@ SLUG is a sub-committee of the
       </section>
     </div>
 
+    <br>
+    <br>
+    <hr>
+
+    <div class="container">
+      <section id="footer">
+        <a href="https://github.com/sydney-linux-user-group/sydney-linux-user-group.github.io">Edit on GitHub</a>
+      </section>
+    </div>
+
   </body>
 
 <script>
