Fixing refresh tag.

--- a/slides.html
+++ b/slides.html
@@ -9,7 +9,7 @@
  border: 0;
 }
 </style>
-<meta http-equiv="refresh" content="900; URL=http://roger.mithis.com/~tim/slug.html">
+<meta http-equiv="refresh" content="900; URL=http://slug.org.au/slides.html">
 </head>
 <body>
 <iframe src="https://docs.google.com/presentation/d/1m_Nz6dI5_cfENfbB5OyB5RSguB9-Y9Nqmed6H5ZP_34/embed?start=true&loop=true&delayms=90000" frameborder="0" width="1600" height="1229" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
